--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <style>
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
+
+        ul li {
+            clear: both;
+            margin-top: 20px;
+
+        }
+
+        ul li img {
+            width: 80px;
+            float: left;
+            margin-right: 10px;
+        }
+
+        ul li strong {
+            font-size: 20px;
+        }
+
+        ul li p {
+            margin: 5px 0;
+        }
+
+        ul li a {
+            width: 100px;
+            text-decoration-line: none;
+            padding: 5px;
+            background-color: #6c4fbb;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     
-    <button id="novotodo">Adicionar</button>
+    <form id="repo-form">
+        <input type="text" name="repository">
+        <button type="submit">Adicionar</button>
+    </form>
+
+    <ul id="repo-list">
+
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/28929274?s=200&v=4">
+            <strong>rocketseat.com.br</strong>
+            <p>Tire sua ideia do papel e dê vida à sua startup.</p>
+            <a href="https://github.com/Rocketseat" target="_blank">Acessar</a>
+        </li>
+
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/28929274?s=200&v=4">
+            <strong>rocketseat.com.br</strong>
+            <p>Tire sua ideia do papel e dê vida à sua startup.</p>
+            <a href="https://github.com/Rocketseat" target="_blank">Acessar</a>
+        </li>
+
+
+    </ul>
 
     <script src="./bundle.js"></script>
+
 </body>
 </html>
